--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Cody Coons<br />
+                Mobile and Web Developer<br />
+                cody@codycoons.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/snooc">github.com/snooc</a><br />
+                <a href="https://twitter.com/codycoons">twitter.com/codycoons</a><br />
               </p>
             </div>
           </div>
